move assets to a public directory

--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,17 @@
     <canvas class="webgl"></canvas>
     <div>
 
-        <img id="intro-ground" src="/static/intro-ground-2.svg"/>
+        <img id="intro-ground" src="/assets/intro-ground-2.svg"/>
         <!-- <img  src="/static/kami-test.png"/> -->
     </div>
     <video id="kami-test">
-        <source src="/static/Kami_circle.webm" type="video/webm">
+        <source src="/assets/Kami_circle.webm" type="video/webm">
       Your browser does not support the video tag.
       </video>
-    <img id="intro-hello" src="/static/hello.svg"/>
-    <img id="intro-fumes" src="/static/flying-fumes.svg"/>
-    <img id="intro-button" src="/static/call-button-unpressed.svg"/>
-    <!-- <script type="text/javascript" src="/socket.io/socket.io.js"></script> -->
-    <!-- <script type="text/javascript" src="three.js"></script> -->
-    <!-- <script type="text/javascript" src="FirstPersonControls.js"></script> -->
-    <!-- <script src="characterControls.ts"></script>  -->
+    <img id="intro-hello" src="/assets/hello.svg"/>
+    <img id="intro-fumes" src="/assets/flying-fumes.svg"/>
+    <img id="intro-button" src="/assets/call-button-unpressed.svg"/>
+
     <script type="module" src="app.js"></script>
 </body>
 </html>
